--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -10,5 +10,7 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.8
+      - name: Install wheel
+        run: pip install setuptools wheel 
       - name: Fetch latest release and regenerate formula
         run: bash publish-brew-formula.sh
